# GarbageScan

./: README.md  settings.gradle
app/: build.gradle
garbagescanner/: build.gradle
libJunkClean/: CMakeLists.txt  build.gradle  local.properties  proguard-rules.pro
libJunkClean/src/main/: AndroidManifest.xml
libJunkClean/src/main/aidl/com/ihs/device/clean/junk/: IJunkService.aidl
libJunkClean/src/main/aidl/com/ihs/device/clean/junk/appinfo/: IAppInfoProcessListener.aidl
libJunkClean/src/main/aidl/com/ihs/device/clean/junk/cache/app/sys/: HSAppSysCache.aidl  IAppInternalSysCacheCleanProcessListener.aidl  IAppSysCacheProcessListener.aidl
libJunkClean/src/main/aidl/com/ihs/device/common/: HSAppFilter.aidl  HSAppInfo.aidl  HSAppUsageInfo.aidl  HSRunningAppInfo.aidl
libJunkClean/src/main/assets/: ad  aj  pr
libJunkClean/src/main/cpp/: jdc.c  un7zip.c
libJunkClean/src/main/cpp/src/: 7zArcIn.c  7zDec.c  7zMain.c  NdkHelper.h
libJunkClean/src/main/java/com/ihs/device/clean/junk/: JunkBroadcastReceiver.java  JunkDataManager.java  LibCleanConfigManager.java
libJunkClean/src/main/java/com/ihs/device/clean/junk/appinfo/: HSAppInfoManager.java
libJunkClean/src/main/java/com/ihs/device/clean/junk/appinfo/agent/: AppInfoScanTaskAgent.java
libJunkClean/src/main/java/com/ihs/device/clean/junk/appinfo/task/: AppInfoScanProcessor.java  AppInfoScanTask.java
libJunkClean/src/main/java/com/ihs/device/clean/junk/service/: JunkService.java  JunkServiceImpl.java
libJunkClean/src/main/java/com/ihs/device/clean/junk/util/: SUtils.java
(+117 files in other folders)
